dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=hootd.1
endif

if ENABLE_QT
  dist_man1_MANS+=hoot-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=hoot-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=hoot-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=hoot-wallet.1
endif
endif
